--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
   "name": "HelloTodo",
-  "version": "1.0.0",
   "description": "A simple todo list application created with StringLoop, LoopBack and Bluemix Mobile Services",
-  "main": "app.js",
+  "version": "1.0.0",
+  "main": "server/server.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node ."
   },
   "author": "Anton Aleksandrov",
   "dependencies": {
-    "cfenv": "^1.0.3",
-    "express": "^4.13.3"
+    "bms-mca-token-validation-strategy": "2.x",
+    "compression": "^1.0.3",
+    "cors": "^2.5.2",
+    "loopback": "^2.22.0",
+    "loopback-boot": "^2.6.5",
+    "loopback-component-explorer": "^2.1.0",
+    "loopback-connector-mysql": "^2.2.0",
+    "loopback-datasource-juggler": "^2.39.0",
+    "passport": "^0.3.2",
+    "serve-favicon": "^2.0.1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/ibm-bluemix-mobile-services/bms-hellotodo-strongloop.git"
+  },
+  "engines": {
+    "node": "0.12.x"
   },
   "license": "Apache-2.0"
 }
